--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,27 +1,58 @@
+
 .Cover{
 
-    background-image: url('../image/Cover.png');
-    height: 35rem;
-    background-repeat: no-repeat;
-    background-size:auto;
+  background-image: url('../image/Cover.png');
+  height: 45rem;
+  width: auto;
+  background-repeat: no-repeat;
+  background-size:auto;
+  background-size: cover;
+  border-radius: 5%;
 
 }
 body{
 background-color: #CCD3CA;
-color:black;
+color: #666666;
 text-align: center;
 
+
 }
+
+p h4 {
+  color: #666;
+}
+
+
+h1{
+font-size: 48px;
+
+}
+
+button{ 
+  border-radius: 5%;
+  width: 10rem;
+  background-color: #E8F9FD;
+  font-family: cursive;
+  font-weight: 100px;
+}
+
 
 .card {
     display: inline-block; /* Ensure cards display horizontally */
     width: 300px;
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
+    background-color: #FFF6E9;
     margin: 20px;
+  }
+
+.container{ 
+    width: 60rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
 
   .card-container {
@@ -31,18 +62,14 @@ text-align: center;
     flex-wrap: nowrap; /* Prevent wrapping */
   }
 
-  h2 {
-    color: #333;
-  }
-
-  p {
-    color: #666;
-  }
+  
 
 
-h1{
- font-size: 48px; /* Adjust the font size as needed */
+#about {
+  background-color: #F7E2E2; 
+  border: 1px solid black;
+  padding: 20px; 
+  margin: 100px auto;
+  max-width: 800px; 
+  color: #666666;
 }
-
-
-
